[build-system]
requires = ["setuptools>=68.0", "wheel>=0.40", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools_scm]
write_to = "astrokit/_version.py"

[project]
name = "astrokit"
version = "0.1.0"
description = "Python orbital mechanics library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "astropy>=6.0",
    "matplotlib>=3.5.0",
    "scipy>=1.12.0",
    "plotly>=5.5.0",
    "jplephem>=2.16",
    "numba>=0.56.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=4.0,<5.0",
    "hypothesis>=6.0,<7.0",
    "mypy>=1.0,<2.0",
    "types-setuptools"
]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.setuptools.packages.find]
where = ["."]
include = ["astrokit"]
exclude = ["tests"]
